# vibecite

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vibecite/: __init__.py  cli.py
