[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibecite"
version = "0.1.0"
description = "A production-ready CLI that turns natural-language paper descriptions into curated citations"
authors = [
    {name = "vibecite", email = "vibecite@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
vc = "vibecite.cli:app"

[project.urls]
Homepage = "https://github.com/jusjinuk/vibecite"
Repository = "https://github.com/jusjinuk/vibecite"
Issues = "https://github.com/jusjinuk/vibecite/issues"

[tool.hatch.version]
path = "src/vibecite/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vibecite"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true